--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
     <link rel="stylesheet" href="assets/chartist.min.css" media="screen" title="no title">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   </head>
-  <body>
-
+  <body style="margin: 0;">
+    <nav style="background-color: #21CE99;">
+      <div class="nav-top">
+        <ul>
+          <li>User Balance</li>
+        </ul>
+      </div>
+      <div class="nav-bottom">
+        <span>.nav-bottom</span>
+      </div>
+    </nav>
     <!-- TODO: Use threshold plugin http://gionkunz.github.io/chartist-js/plugins.html#zoom-plugin -->
-
+    <div><span id="live-price"></span> mBTC</div>
     <canvas id="sparkline" width="100%" height="100%" data-sparkline="1,2,3,4,5,5.5,5.8,6,5.4,4.8,3,2,2,6,7,8,9,10,10,7,6,7,7,8,9">
 Your browser does not support the HTML5 canvas tag.</canvas>
 
+    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="https://autobahn.s3.amazonaws.com/autobahnjs/latest/autobahn.min.js"></script>
     <script type="text/javascript" src="assets/sparkline.js"></script>
 
