--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
       <div class="row">
         <div class="col-md-9">
 
-          <div class="price"><span id="live-price"></span> mBTC</div>
+          <div class="price">
+            <p>
+              <span id="live-price"></span> mBTC
+            </p>
+            <small>+5.2%</small>
+          </div>
 
           <div class="card chart">
             <canvas id="sparkline" width="100%" height="100%" data-sparkline="1,2,3,4,5,5.5,5.8,6,5.4,4.8,3,2,2,6,7,8,9,10,10,7,6,7,7,8,9">
@@ -49,7 +54,12 @@
         </div>
 
         <div class="col-md-3">
-          <div class="price"><span id="live-return-rate">80</span> %</div>
+          <div class="price">
+            <p>
+              <span id="live-return-rate">80</span>%
+            </p>
+            <small>Return Rate</small>
+          </div>
           <div class="orders">
             <div class="card">
               <ul>
